media/css/reader/darkmode.css
/* ... */
.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-1 .NB-feed-story-url-matched {
    color: #a0ca80;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score--1 {
    /* Red */
    background-color: rgba(144, 80, 81, 0.3);
    color: #c08080;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score--1 .NB-feed-story-url-matched {
    color: #d58586;
}

.NB-dark .NB-feed-story .NB-feed-story-url:hover {
    /* Gray, active -> Green */
    background-color: rgba(98, 124, 80, 0.4);
    color: #8aaa70;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-1:hover {
    /* Green, hover -> Darker Green */
    background-color: rgba(98, 124, 80, 0.5);
    color: #a0ca80;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-1:hover .NB-feed-story-url-matched {
    color: #b8dc98;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score--1:hover {
    /* Red, hover -> Darker Red */
    background-color: rgba(144, 80, 81, 0.5);
    color: #d58586;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score--1:hover .NB-feed-story-url-matched {
    color: #e89a9b;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-now-0:hover {
    /* Grey, active */
    background-color: rgba(255, 255, 255, .05);
    color: #909090;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-now-1.NB-score-1:hover {
    /* Green, active */
    background-color: rgba(98, 124, 80, 0.5);
    color: #a0ca80;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-now-1.NB-score-1:hover .NB-feed-story-url-matched {
    color: #a0ca80;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-now--1.NB-score--1:hover {
    /* Red, active */
    background-color: rgba(144, 80, 81, 0.5);
    color: #d58586;
}

.NB-dark .NB-feed-story .NB-feed-story-url.NB-score-now--1.NB-score--1:hover .NB-feed-story-url-matched {
    color: #d58586;
}


/* Story title text color */
.NB-dark .NB-feed-story a.NB-feed-story-title {
    color: #d0d0d0;
}

.NB-dark .NB-feed-story.read a.NB-feed-story-title {
    color: #c0c0c0;
}

/* Story buttons (Train, Save, Share) */
.NB-dark .NB-sideoption {
    border: none;
    text-shadow: none;
    background-color: transparent;
}


/* Story button text color (Train, Save, Share) */
.NB-dark .NB-sideoption .NB-sideoption-title {
    color: #808080;
}

.NB-dark .NB-sideoption-save,
.NB-dark .NB-sideoption-share,
.NB-dark .NB-sideoption-discover {
    border: 1px solid #303739;
}

/* Save story and share window. Tag/Comment title */
.NB-dark .NB-sideoption-save .NB-sideoption-save-title,
.NB-dark .NB-sideoption-share .NB-sideoption-share-title {
    text-shadow: none;
    color: #c0c0c0;
}

.NB-dark .NB-sideoption-discover .segmented-control-item a {
    color: #c0c0c0;
}

.NB-dark ul.tagit {
    border-color: #303739;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

/* Tag button and "Add 1 story tag" button */
.NB-dark ul.tagit li.tagit-choice,
.NB-dark .NB-sideoption-save .NB-sideoption-save-populate {
    color: #c0c0c0;
    background-color: #303739;
    border-color: rgba(255, 255, 255, .1) transparent rgba(0, 0, 0, .1);
}

.NB-dark ul.tagit li.tagit-new {
    flex: 1;
    min-width: 50px;
}

/* Tag window when saving story. Input box */
.NB-dark ul.tagit input[type="text"] {
    color: #c0c0c0;
    background: transparent;
    border: none;
    width: 100%;
}

/* Tag window when saving story. Input box suggestions (1 of 3) */
.NB-dark .NB-tagging-autocomplete.ui-widget-content {
    width: auto;
    border: 1px solid #90928b;
    border-radius: 4px;
    background-color: #303739;
    color: #c0c0c0;
}

/* Tag window when saving story. Input box suggestions (2 of 3) */
.NB-dark .NB-tagging-autocomplete.ui-widget-content a {
    border-radius: 0px;
    background-color: #303739;
    background: #303739;
    color: #c0c0c0;
}

/* Tag window when saving story. Input box suggestions - focused item */
.NB-dark .NB-tagging-autocomplete.ui-widget-content a.ui-state-focus,
.NB-dark .NB-tagging-autocomplete.ui-widget-content a.ui-state-active {
    background-color: #252D30;
    background: #252D30;
    color: #e0e0e0;
    border-color: #505050;
}

/* Tag window when saving story. Input box suggestions (3 of 3) */
.NB-dark .NB-tagging-autocomplete.ui-widget-content a:hover {
    border-radius: 0px;
    background-color: #252D30;
    background: #252D30;
    color: #e0e0e0;
}

.NB-dark .NB-sideoption-save .NB-sideoption-save-notes {
    color: #c0c0c0;
    background: none;
    background-color: #303739;
    border: solid 1px #303739;
}

.NB-dark .NB-sideoption-share-comments {
    color: #000;
    background: #777;
    border: 1px solid #90928b;
}


.NB-dark .NB-sideoption:hover,
.NB-dark .NB-sideoption.NB-active,
.NB-dark .NB-story-starred .NB-dark .NB-sideoption.NB-feed-story-save,
.NB-dark .NB-story-shared .NB-sideoption.NB-feed-story-share {
    background-color: #303739;
}

/* Story comment teaser (Top of story) and story comment (bottom of story) color */
.NB-dark .NB-story-comments-shares-teaser,
.NB-dark .NB-feed-story-comments {
    border-color: #18191A;
    text-shadow: 0 1px 0 rgba(0, 0, 0, .8);
}

/* Story comment border color */
.NB-dark .NB-story-comment,
.NB-dark .NB-story-comment-reply {
    border-color: #191b1c;
}


/*
.NB-dark .NB-story-content-wrapper .NB-story-content-expander {
background: #191b1c;
}
*/

/* Story comment text color*/
.NB-dark .NB-story-comment-content,
.NB-dark .NB-story-comment-reply-content {
    color: #c0c0c0;
}


/* Story commenter username color */
.NB-dark .NB-story-comment .NB-story-comment-username {
    color: #83b4e0;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, .5);
}

/* Comment reply input field color */
.NB-dark .NB-story-comment-reply-comments {
    border: solid 1px #505050;
    background-color: #505050;
}

/* Comment "Reply" & "Post" button color */
.NB-dark .NB-story-comment-reply-button-wrapper {
    background-color: #505050;
}
/* ... */

